[package]
name = "lief-binaryninja-arm64ec"
authors = ["Romain Thomas <me@romainthomas.fr>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
binaryninja = {git = "https://github.com/Vector35/binaryninja-api.git", branch = "dev"}
lief = {git = "https://github.com/lief-project/LIEF", branch = "main"}
log = "0.4"
